Migrate JAXB to jakarta
- change javax.* JAXB packages to jakarta.*
- bump snapshot version to 1.15.0-SNAPSHOT

Issue-ID: AAI-4005
Change-Id: I2a208f717206a2ee8c2acaec8abb0a04fc620123
Signed-off-by: Fiete Ostkamp <Fiete.Ostkamp@telekom.de>